Make modify-record preserve protected links
